--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,15 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
 body{
     background: #F8F8F8;
-}
-
-p{
-    font-size: 10px;
-}
-
-h1{
-   font-size: 14px;
-   margin: 0;
-   padding:0;
-}
-
-h2{
-   font-size: 12px;
-   margin:0;
-   padding:0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
 }
 
 .links line {
-  stroke: #aaa;
+    fill: none;
+    stroke: #333;
+    stroke-width: 1.5px;
 }
 
 .nodes image {
@@ -29,22 +19,23 @@ h2{
 }
 
 .d3-tip {
+  font-family: 'Roboto', sans-serif;
+  font-weight: lighter;
   line-height: 1;
-  font-weight: bold;
-  padding: 12px;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  border-radius: 2px;
+  padding: 15px 15px 10px 15px;
+  background: rgba(34, 34, 34, 0.9);
+  color: rgba(34, 34, 34, 0.9);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 /* Creates a small triangle extender for the tooltip */
 .d3-tip:after {
   box-sizing: border-box;
   display: inline;
-  font-size: 10px;
   width: 100%;
   line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
   content: "\25BC";
   position: absolute;
   text-align: center;
@@ -55,4 +46,46 @@ h2{
   margin: -1px 0 0 0;
   top: 100%;
   left: 0;
+}
+
+.d3-tip span{
+    color: rgba(56,238,255, 1);
+}
+
+.d3-tip p{
+    font-size: 12px;
+    padding: 0 0 10px 0;
+    color: rgba(255, 255, 255, .75);
+}
+
+.d3-tip h1{
+   font-size: 16px;
+   margin: 0;
+   padding:0;
+   color: #61B329;
+}
+
+.d3-tip hr{
+   border: none;
+   border-top:1px dashed rgba(255, 255, 255, .90);
+}
+
+.d3-tip h2{
+   font-size: 14px;
+   margin:0;
+   color: orange;
+   padding:0 0 15px 0;
+}
+
+
+circle {
+  fill: #ccc;
+  stroke: #333;
+  stroke-width: 1.5px;
+}
+
+text {
+  font-size: 10px;
+  pointer-events: none;
+  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
 }
